tests/baselines/reference/privateNameConstructorReserved.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNameConstructorReserved.ts(4,5): error TS18012: '#constructor' is a reserved word.
tests/cases/conformance/classes/members/privateNames/privateNameConstructorReserved.ts(4,5): error TS18022: A method cannot have a private identifier. This feature may be supported in a future release.


==== tests/cases/conformance/classes/members/privateNames/privateNameConstructorReserved.ts (2 errors) ====
    // @target es6
    
    class A {
        #constructor() {}      // Error: `#constructor` is a reserved word.
        ~~~~~~~~~~~~
!!! error TS18012: '#constructor' is a reserved word.
        ~~~~~~~~~~~~
!!! error TS18022: A method cannot have a private identifier. This feature may be supported in a future release.
    }
    